--- a/pom.xml
+++ b/pom.xml
@@ -6,19 +6,18 @@
 	<artifactId>drools-automated-test</artifactId>
 	<version>1.0.0</version>
 	<properties>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
 
-		<kie.bom.version>7.7.0.Final</kie.bom.version>
+		<kie.bom.version>7.17.0.Final</kie.bom.version>
 
-		<!-- JUNIT 5 test -->
-		<junit.bom.version>5.2.0</junit.bom.version>
+		<junit.bom.version>5.4.0</junit.bom.version>
+		
+		<maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
+		<maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
+		<commons-beanutils.version>1.9.3</commons-beanutils.version>
 
-		<junit.jupiter.version>5.2.0</junit.jupiter.version>
-		<junit.vintage.version>5.2.0</junit.vintage.version>
-		<junit.platform.version>1.2.0</junit.platform.version>
-
-		<zerocell.version>0.3.0</zerocell.version>
+		<zerocell.version>0.3.2</zerocell.version>
 	</properties>
 
 	<dependencyManagement>
@@ -78,19 +77,13 @@
 
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-engine</artifactId>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.junit.vintage</groupId>
-			<artifactId>junit-vintage-engine</artifactId>
+			<artifactId>junit-jupiter-api</artifactId>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-api</artifactId>
+			<artifactId>junit-jupiter-engine</artifactId>
 			<scope>test</scope>
 		</dependency>
 
@@ -104,9 +97,21 @@
 		<dependency>
 			<groupId>commons-beanutils</groupId>
 			<artifactId>commons-beanutils</artifactId>
-			<version>1.9.3</version>
+			<version>${commons-beanutils.version}</version>
 		</dependency>
 
-
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven-compiler-plugin.version}</version>
+			</plugin>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${maven-surefire-plugin.version}</version>
+			</plugin>
+		</plugins>
+	</build>
 </project>
