--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
 		<maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
 		<commons-beanutils.version>1.9.3</commons-beanutils.version>
 
+
+		<weld-junit.version>2.0.0.Final</weld-junit.version>
 		<zerocell.version>0.3.2</zerocell.version>
 	</properties>
 
@@ -52,6 +54,10 @@
 			<groupId>org.kie</groupId>
 			<artifactId>kie-api</artifactId>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.drools</groupId>
+			<artifactId>drools-cdi</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.drools</groupId>
@@ -109,6 +115,36 @@
 			<groupId>commons-beanutils</groupId>
 			<artifactId>commons-beanutils</artifactId>
 			<version>${commons-beanutils.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.enterprise</groupId>
+			<artifactId>cdi-api</artifactId>
+			<version>2.0.SP1</version>
+			<scope>provided</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>javax.el</groupId>
+					<artifactId>javax.el-api</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>javax.interceptor</groupId>
+					<artifactId>javax.interceptor-api</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jboss.weld.se</groupId>
+			<artifactId>weld-se-core</artifactId>
+			<version>3.1.1.Final</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.jboss.weld</groupId>
+			<artifactId>weld-junit5</artifactId>
+			<version>${weld-junit.version}</version>
 		</dependency>
 
 	</dependencies>
