--- a/pom.xml
+++ b/pom.xml
@@ -12,13 +12,13 @@
 
 		<kie.bom.version>7.24.0.Final</kie.bom.version>
 
-		<junit.bom.version>5.5.0</junit.bom.version>
+		<junit.bom.version>5.4.1</junit.bom.version>
 
 		<maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
 		<maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
 		<commons-beanutils.version>1.9.3</commons-beanutils.version>
 
-
+		<weld.version>3.1.0.Final</weld.version>
 		<weld-junit.version>2.0.0.Final</weld-junit.version>
 		<zerocell.version>0.3.2</zerocell.version>
 	</properties>
@@ -117,6 +117,8 @@
 			<version>${commons-beanutils.version}</version>
 		</dependency>
 
+
+
 		<dependency>
 			<groupId>javax.enterprise</groupId>
 			<artifactId>cdi-api</artifactId>
@@ -137,14 +139,14 @@
 		<dependency>
 			<groupId>org.jboss.weld.se</groupId>
 			<artifactId>weld-se-core</artifactId>
-			<version>3.1.1.Final</version>
+			<version>${weld.version}</version>
 		</dependency>
-
 
 		<dependency>
 			<groupId>org.jboss.weld</groupId>
 			<artifactId>weld-junit5</artifactId>
 			<version>${weld-junit.version}</version>
+			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
