--- a/pom.xml
+++ b/pom.xml
@@ -10,17 +10,17 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 
-		<kie.bom.version>7.24.0.Final</kie.bom.version>
+		<kie.bom.version>7.34.0.Final</kie.bom.version>
 
-		<junit.bom.version>5.4.1</junit.bom.version>
+		<junit.bom.version>5.6.1</junit.bom.version>
 
-		<maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
-		<maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
+		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+		<maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
 		<commons-beanutils.version>1.9.3</commons-beanutils.version>
 
 		<cdi-api.version>2.0.SP1</cdi-api.version>
-		<weld.version>3.1.0.Final</weld.version>
-		<weld-junit.version>2.0.0.Final</weld-junit.version>
+		<weld.version>3.1.4.Final</weld.version>
+		<weld-junit5.version>2.0.1.Final</weld-junit5.version>
 		<zerocell.version>0.3.2</zerocell.version>
 	</properties>
 
@@ -144,7 +144,7 @@
 		<dependency>
 			<groupId>org.jboss.weld</groupId>
 			<artifactId>weld-junit5</artifactId>
-			<version>${weld-junit.version}</version>
+			<version>${weld-junit5.version}</version>
 			<scope>test</scope>
 		</dependency>
 
