--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
 		<kie.bom.version>7.34.0.Final</kie.bom.version>
 
-		<junit.bom.version>5.6.2</junit.bom.version>
+		<junit.bom.version>5.7.0-M1</junit.bom.version>
 
 		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
 		<maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
